# KanbanBoard

./: CMakeLists.txt  DatabaseSQLite.cpp  DatabaseSQLite.h  IDatabaseManage.h  KanbanColumn.qml  KanbanTask.qml  Main.qml  README.md  column.cpp  column.h  columnmodel.cpp  columnmodel.h  kanbancontroller.cpp  kanbancontroller.h  kanbanmodel.cpp  kanbanmodel.h  main.cpp  taskmodel.cpp  taskmodel.h
